--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,17 @@ services:
       - .:/src
     ports:
       - 8000:8000
+  db:
+    image: mysql:8.0
+    platform: linux/x86_64
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+      MYSQL_DATABASE: "demo"
+      TZ: "Asia/Tokyo"
+    volumes:
+      - mysql-data:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
+    ports:
+      - 3306:3306
+volumes:
+  mysql-data:
